--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 numpy==1.24.2
+pandas==1.5.3
 platformdirs==3.1.1
 pylint==2.17.0
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
