--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 astroid==2.15.0
+colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
 dill==0.3.6
+fonttools==4.39.3
+importlib-resources==5.12.0
 isort==5.12.0
+kiwisolver==1.4.4
 lazy-object-proxy==1.9.0
+matplotlib==3.7.1
 mccabe==0.7.0
 numpy==1.24.2
+packaging==23.1
 pandas==1.5.3
+Pillow==9.5.0
 platformdirs==3.1.1
 pylint==2.17.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
 six==1.16.0
@@ -14,3 +24,4 @@ tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
 wrapt==1.15.0
+zipp==3.15.0
